fix html align

--- a/css/style.css
+++ b/css/style.css
@@ -298,5 +298,7 @@
 
 .text-coaching-row2 {
     font-size: large;
-    color: black;
+    color: white;
+    margin-top:10%;
+    font-size: larger;
 }
